🤖 | Add link verification and stop data commit

--- a/.gitignore
+++ b/.gitignore
@@ -110,8 +110,9 @@ ENV/
 env.bak/
 venv.bak/
 
-# Config file
+# Config and data file
 /config.json
+/data.json
 
 # Spyder project settings
 .spyderproject
